plugins {
    id 'java'
    id 'org.openrewrite.rewrite' version '7.2.1'
}

repositories {
    mavenCentral()
}

rewrite {
    activeRecipe(
        'org.openrewrite.java.migrate.UpgradeToJava21'
    )
    setExportDatatables(true)
}

dependencies {
    rewrite("org.openrewrite.recipe:rewrite-migrate-java:3.4.0")
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    useJUnitPlatform()
}